# swc-plugin-translation-importer

./: .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  LICENSE-3RD-PARTY  LICENSE-MIT  README.md  cliff.toml  package-lock.json  package.json  swc_plugin_i18n.wasm
.github/workflows/: pr.yml
src/: config.rs  helpers.rs  lib.rs  settings.rs
testdata/: translations.i18n
tests/__swc_snapshots__/src/lib.rs/: by_language_code.js  icu_by_language.js  icu_code.js  markdown_code.js  md_by_language.js  nested_code.js  no_transpile_test_mode.js  no_usages.js  transpile_dev_mode.js  transpile_prod_mode.js  use_client.js  use_strict.js
