[package]
name = "swc-plugin-translation-importer"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Uncomment to achieve smallest possible binary size (may require more experimentation).
# Disclaimer: measure effects on runtime, results can be surprising.
# strip = "debuginfo"
# codegen-units = 1
# lto = true
# opt-level = "z"

[dependencies]
serde = "1.0.173"
serde_json = "1.0.103"
swc_core = { version = "0.79.13", features = ["ecma_plugin_transform"] }
sha2 = "0.10.7"
