[package]
name = "swc-plugin-translation-importer"
version = "3.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This profile typically results in small binary size with acceptable impact on
# performance, but there may well be further optimizations to be had.
strip = "debuginfo"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
serde = "1.0.173"
serde_json = "1.0.103"
swc_core = { version = "14.0.1", features = ["ecma_plugin_transform"] }
sha2 = "0.10.7"
